# docs/api/openapi-bff.json
@@ -1838,6 +1838,24 @@
             }
           },
           {
+            "name": "days",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "integer",
+                  "maximum": 3650,
+                  "minimum": 1
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Days"
+            }
+          },
+          {
             "name": "industry",
             "in": "query",
             "required": false,
